tf/vpc.tf
resource "aws_vpc" "main" {
  cidr_block       = "10.0.0.0/16"
  instance_tenancy = "default"

  tags = {
    Name    = "main"
    Project = var.project
    Owner   = var.owner
  }
}
